# artifacts/api-server/src/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import transitairesRouter from "./transitaires";
 import clientsRouter from "./clients";
 import arrivagesRouter from "./arrivages";
 import colisRouter from "./colis";
@@ -9,6 +10,7 @@ import rapportsRouter from "./rapports";
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(transitairesRouter);
 router.use(clientsRouter);
 router.use(arrivagesRouter);
 router.use(colisRouter);
